--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -15,3 +15,7 @@ jobs:
         with:
           comment_tag_name: "YOUTUBE"
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCs8YuffktnbeZiHfPwQ2A9g"
+          custom_tags: "videoId/yt:videoId/"
+          max_post_count: 6
+          template: "$newline[![$title](https://freshidea.com/jonah/app/youtube-card/?id=$videoId)]($url \"$title\")"
+          committer_email: "pgalani193@rku.ac.in"
