--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -17,5 +17,5 @@ jobs:
           feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCs8YuffktnbeZiHfPwQ2A9g"
           custom_tags: "videoId/yt:videoId/"
           max_post_count: 6
-          template: "$newline[![$title](id=$videoId)]($url \"$title\")"
+          template: "<tr><td><a href=\"$url\"><img width=\"140px\" src=\"https://i.ytimg.com/vi/$videoId/mqdefault.jpg\"></a></td>$newline<td><a href=\"$url\">$title</a><br/>$date</td></tr>$newline"
           committer_email: "pgalani193@rku.ac.in"
